more accurate memory model for 64-bit machines. Still needs signed operation support. Should be easy now.