@@ -1,5 +1,6 @@
 package com.galois.symbolicSimulator;
 
+import java.math.BigInteger;
 import java.util.ArrayList;
 import java.util.Iterator;
 import java.util.List;
@@ -11,20 +12,15 @@ public class PCodeSpace {
 	int length;
 	int wordsize;
 	PCodeArchSpec arch;
-	SortedMap<Integer,Integer> contents;
+	SortedMap<BigInteger,Integer> contents;
 	boolean constSpace = false;
-	boolean regSpace = false;
 
 	public PCodeSpace(String n, PCodeArchSpec a) {
 		name = n;
 		if (n.equals("const")) constSpace = true;
-		else contents = new TreeMap<Integer,Integer>();
-		if (n.equals("register")) regSpace = true;
+		else contents = new TreeMap<BigInteger,Integer>();
 		arch = a;
 	}
-	public void ensureCapacity(long offset) {
-		// nothing to do with Hashtable - with an array, hod to realloc and copy
-	}	
 	
 	public String toString() {
 		String ret = "Space " + name + ", length = " + length + ":\n";
@@ -32,11 +28,11 @@ public class PCodeSpace {
 		if (name.equals("register")) {
 			int count = 0;
 			int lastKey = 0;
-			for (Iterator<Integer> ks = contents.keySet().iterator() ; ks.hasNext(); ) {
-				Integer k = ks.next();
+			for (Iterator<BigInteger> ks = contents.keySet().iterator() ; ks.hasNext(); ) {
+				BigInteger k = ks.next();
 				int thisKey = k.intValue();
 				if (count % 8 == 0 || thisKey > lastKey + 1) {
-					ret += "0x" + Integer.toHexString(thisKey) + ":\t";
+					ret += "0x" + k.toString(16) + ":\t";
 					count++; // make space for these tags
 				}
 				Integer next = contents.get(k);
@@ -48,11 +44,11 @@ public class PCodeSpace {
 			}
 		} else {
 			int count = 0;
-			for (Iterator<Integer> ks = contents.keySet().iterator() ; ks.hasNext(); ) {
-				Integer k = ks.next();
+			for (Iterator<BigInteger> ks = contents.keySet().iterator() ; ks.hasNext(); ) {
+				BigInteger k = ks.next();
 				Integer next = contents.get(k) & 0xff;
 				int val = next.intValue() & 0xff;
-				ret += "0x" + Integer.toHexString(k.intValue()) + ": " + Integer.toHexString(val);
+				ret += "0x" + k.toString(16) + ": " + Integer.toHexString(val);
 				if (val >= 32 && val <= 176) {
 					asciiCol += String.valueOf((char)val);
 				} // else { asciiCol += "."; }
@@ -68,22 +64,24 @@ public class PCodeSpace {
 		return ret;
 	}
 	
-	public Integer getByte(long base, int offset) throws Exception {
+	public Integer getByte(BigInteger base, int offset) throws Exception {
 		if (constSpace) {
 			long retVal = 0;
+			long baseVal = base.longValueExact();
 			// base is our number, offset is the "ith" byte we're after
 			if (arch.bigEndianP) {
-				retVal = 0xffl & (base >> (7-offset) * 8);
+				retVal = 0xffl & (baseVal >> (7-offset) * 8);
 			} else {
-				retVal = 0xffl & (base >> (offset * 8));
+				retVal = 0xffl & (baseVal >> (offset * 8));
 			}
 			return new Integer((int)(retVal & 0xff));
 		} else {
-			Integer ret = contents.get(new Integer((int)base + offset));
+			Integer ret = contents.get(base.add(BigInteger.valueOf(offset)));
 			if (ret != null) {
 				return ret;
 			} else {
-				throw new Exception("fetch from unitialized memory @ " + Integer.toHexString(((int)base + offset)));
+				throw new Exception("fetch from unitialized memory @ " + 
+						base.add(BigInteger.valueOf(offset)));
 			}
 		}
 	}
@@ -94,27 +92,32 @@ public class PCodeSpace {
 // the microOps list is all of the micro instructions
 class PCodeCodeSpace extends PCodeSpace {
 	List<PCodeOp> microOps;
-	int[] macroOps; // indexes into the above list for the beginning of each macroOp
+	// "contents" indexes into the above list for the beginning of each macroOp
 	int microIndex = 0;
 	
 	public PCodeCodeSpace(PCodeArchSpec a) {
 		super("data_segment", a);
 		microOps = new ArrayList<>(8196);
-		macroOps = new int[128]; // TODO: handle growth, parse length ahead of time, or change to List
 	}
 	
 	public PCodeOp fetch (int pc) {
 		return microOps.get(pc);
 	}
 	
-	public int microAddrOfVarnode(Varnode v) {
-		return macroOps[(int) v.offset];
+	public int microAddrOfVarnode(Varnode v) throws Exception {
+		return microAddrOfMacroInstr(v.offset);
 	}
-	public int microAddrOfMacroInstr(long macroOffset) throws Exception {
-		if (macroOffset < macroOps.length) {
-			return macroOps[(int)macroOffset];
-		} 
-		throw new Exception("Attempted to fetch opcode out of range @ " + Long.toHexString(macroOffset));
+	public int microAddrOfMacroInstr(BigInteger macroOffset) throws Exception {
+		if (contents == null) {
+			throw new Exception ("Null contents in varnode " + this.toString());
+		}
+		if (macroOffset == null) {
+			throw new Exception ("Null PC in fetch instruction");
+		}
+		if (contents.containsKey(macroOffset))
+			return contents.get(macroOffset);
+		else 
+			throw new Exception ("Fetch outside code space @0x" + macroOffset.toString(16));
 	}
 	
 	public Varnode addOp(PCodeOp op, PCodeSpace space, PCodeProgram prog) {
@@ -122,7 +125,7 @@ class PCodeCodeSpace extends PCodeSpace {
 		Varnode ret = null;
 		microOps.add(microIndex, op);
 		if (op.uniq == 0) {
-			macroOps[op.offset] = microIndex;
+			contents.put(op.offset, new Integer(microIndex));
 			ret = new Varnode(prog);
 			ret.offset = op.offset;
 			ret.space = space;
